# deepsky

./: .gitignore  HANDOFF.md  README.md  pyproject.toml
cloud/: README.md  setup.sh  sync_checkpoints.sh
configs/: cloud-128px-full.yaml  mac-64px-validation.yaml  smoke.yaml
scripts/: build_dataset.py  clip_filter.py  download_all.py  prune_bright_and_spectra.py  prune_non_observations.py  sample.py  scrape_image_types.py  train.py
space/: README.md  app.py  requirements.txt
src/deepsky/: config.py
src/deepsky/data/: d2d_client.py  dataset.py  dedup.py  download.py  filtering.py  nasa_client.py  preprocess.py
src/deepsky/diffusion/: gaussian.py  samplers.py  schedule.py
src/deepsky/models/: unet.py
src/deepsky/training/: checkpoint.py  ema.py  train.py
src/deepsky/utils/: grid.py  logging.py
tests/: test_checkpoint.py  test_dataset.py  test_diffusion_math.py  test_overfit.py  test_schedule.py  test_unet_shapes.py
