[project]
name = "deepsky-diffusion"
version = "0.1.0"
description = "From-scratch DDPM for generating deep-sky astronomical images"
requires-python = ">=3.11"
dependencies = [
    # Intel macOS (this dev machine) is stuck on the last x86_64 build; every
    # other platform (Mac mini arm64, cloud linux) gets a modern torch.
    "torch>=2.2,<2.3; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torch>=2.4; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "pillow>=10.0",
    # torch 2.2 (Intel mac) is compiled against numpy 1.x
    "numpy>=1.26,<2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "numpy>=1.26; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "requests>=2.31",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "imagehash>=4.3",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deepsky"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: long-running tests (overfit gate); run on the Mac mini"]
addopts = "-m 'not slow'"
